--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Shared/ApiError.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Shared/ApiError.razor
@@ -1,6 +1,6 @@
 ﻿@if (!string.IsNullOrEmpty(Message))
 {
-    <div class="message-box-solid error" role="alert">
+    <div class="message-box-solid error" role="alert" style="white-space: pre-wrap;">
         @Message
     </div>
 }
