Add Team Abbreviations

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Team/Edit.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Team/Edit.razor
@@ -30,6 +30,12 @@
                         <InputText id="name" class="form-control" @bind-Value="_model.Name" />
                         <StyledValidationMessage For="@(() => _model.Name)" />
                     </div>
+                    
+                    <div class="mb-3">
+                        <label for="abbreviation" class="form-label text-white">Abbreviation (3 letters)</label>
+                        <InputText id="abbreviation" class="form-control" @bind-Value="_model.Abbreviation" />
+                        <StyledValidationMessage For="@(() => _model.Abbreviation)" />
+                    </div>
 
                     <div class="mb-3">
                         <label for="logoUrl" class="form-label text-white">Logo URL</label>
