--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Home.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Home.razor
@@ -105,7 +105,7 @@
                             <div class="card-body text-center">
                                 <img src="https://randomuser.me/api/portraits/men/32.jpg" class="rounded-circle mb-3" alt="User testimonial photo">
                                 <p class="card-text fst-italic">"This has completely changed how I watch football on the weekend. Every match matters now!"</p>
-                                <footer class="blockquote-footer text-white-50 mt-3">Mark S, London</footer>
+                                <footer class="blockquote-footer text-white-50 mt-3">Louis L, Northampton</footer>
                             </div>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                             <div class="card-body text-center">
                                 <img src="https://randomuser.me/api/portraits/women/44.jpg" class="rounded-circle mb-3" alt="User testimonial photo">
                                 <p class="card-text fst-italic">"Our office league has never been more competitive. The banter is brilliant, and the platform is so easy to use."</p>
-                                <footer class="blockquote-footer text-white-50 mt-3">Sarah L, Manchester</footer>
+                                <footer class="blockquote-footer text-white-50 mt-3">Mitch W, Kent</footer>
                             </div>
                         </div>
                     </div>
@@ -123,7 +123,7 @@
                             <div class="card-body text-center">
                                 <img src="https://randomuser.me/api/portraits/men/3.jpg" class="rounded-circle mb-3" alt="User testimonial photo">
                                 <p class="card-text fst-italic">"Finally beat my dad in our family league last season. Best feeling ever! Can't wait for the new season to start."</p>
-                                <footer class="blockquote-footer text-white-50 mt-3">Tom P, Liverpool</footer>
+                                <footer class="blockquote-footer text-white-50 mt-3">Ross H, Kent</footer>
                             </div>
                         </div>
                     </div>
