Prediction Grid UI Changes

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Account/Details.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Account/Details.razor
@@ -99,6 +99,6 @@
             PhoneNumber = _model.PhoneNumber
         };
 
-        return Http.PutAsJsonAsync("api/account/update-details", request);
+        return Http.PutAsJsonAsync("api/account/details", request);
     }
 }
