--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/Dashboard.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/Dashboard.razor
@@ -19,8 +19,8 @@
             <p class="text-center text-white"><em>Loading dashboard...</em></p>
         }
         else
-        {
-            <h3 class="text-center fw-bold text-white mb-4">League Dashboard - @State.LeagueName</h3>
+        { 
+            <h3 class="text-center fw-bold text-white mb-4">@State.LeagueName</h3>
 
             <div class="row">
                 <div class="col-12 mb-4">
